help command table :>

--- a/cosmonaut.html
+++ b/cosmonaut.html
@@ -74,6 +74,49 @@
         <h1><a href="https://discord.com/api/oauth2/authorize?client_id=799583165706010624&permissions=8&redirect_uri=https%3A%2F%2Fstarve-l.github.io%2Fcosmonaut%2Fdone&scope=bot">Invite link</a></h1><br>
     </center>
         <p>
+            I'm working on a list of commands here.
+            <table id="table">
+                <th>
+                    <tr>
+                        <td>Command</td>
+                        <td>Description</td>
+                        <td>Cooldown</td>
+                        <td>Aliases</td>
+                    </tr>
+                </th>
+                <tb>
+                    <tr>
+                        <td>avatar</td>
+                        <td>Sends a large version of the mentioned users avatar</td>
+                        <td>5</td>
+                        <td>av</td>
+                    </tr>
+                    <tr>
+                        <td>balance</td>
+                        <td>Shows your economy balance</td>
+                        <td>2</td>
+                        <td>bal, b</td>
+                    </tr>
+                    <tr>
+                        <td>clear</td>
+                        <td>Clears up tp 99 messages</td>
+                        <td>5</td>
+                        <td>prune, purge</td>
+                    </tr>
+                    <tr>
+                        <td>deletecategory</td>
+                        <td>Deletes a category and every channel in that category</td>
+                        <td>2</td>
+                        <td>dcat</td>
+                    </tr>
+                    <tr>
+                        <td>inventory</td>
+                        <td>Shows your economy inventory content</td>
+                        <td>2</td>
+                        <td>i</td>
+                    </tr>
+                </tb>
+            </table>
             <ol>Currency System</ol><br>
             <img src="https://i.imgur.com/UEh99ng.png">
             <ol>Reddit command</ol><br>
