updated table and table color

--- a/cosmonaut.html
+++ b/cosmonaut.html
@@ -52,6 +52,9 @@
             background-color: #111;
             transition: 0.3s all ease-in;
         }
+        table {
+            background-color: #333;
+        }
         </style>
         <script>
             function toggleLightMode() {
@@ -114,6 +117,30 @@
                         <td>Shows your economy inventory content</td>
                         <td>2</td>
                         <td>i</td>
+                    </tr>
+                    <tr>
+                        <td>invite</td>
+                        <td>Sends a bot invite link for your server</td>
+                        <td>2</td>
+                        <td>inv</td>
+                    </tr>
+                    <tr>
+                        <td>iteminfo</td>
+                        <td>Shows item info of economy item</td>
+                        <td>2</td>
+                        <td>iinfo, ii</td>
+                    </tr>
+                    <tr>
+                        <td>prefix</td>
+                        <td>Changes the bot prefix for the current server</td>
+                        <td>2</td>
+                        <td>p</td>
+                    </tr>
+                    <tr>
+                        <td>togglewelcome</td>
+                        <td>Toggles the welcome image function</td>
+                        <td>2</td>
+                        <td>tw</td>
                     </tr>
                 </tb>
             </table>
